[tool.poetry]
name = "gcr"
version = "0.1.0"
description = "Music genre classification research"
authors = ["Michael Chernigin <michaelchernigin@gmail.com>",
           "Nikita Rydanov <wrongwayboyy@gmail.com>",
           "Daniil Koveshnikov <dan-acer@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
