[tool.poetry]
name = "gcr"
version = "0.1.0"
description = "Music genre classification research"
authors = ["Michael Chernigin <michaelchernigin@gmail.com>",
           "Nikita Rydanov <wrongwayboyy@gmail.com>",
           "Daniil Koveshnikov <dan-acer@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
seaborn = "^0.12.2"
pandas = "^1.5.3"
librosa = "^0.10.0"
tensorflow-macos = {version = "^2.11.0", platform = "darwin"}
tensorflow = {version = "^2.11.0", platform = "linux"}
tensorflow-metal = {version = "^0.7.1", platform = "darwin"}
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
