[tool.poetry]
name = "gcr"
version = "0.1.0"
description = "Music genre classification research"
authors = ["Michael Chernigin <michaelchernigin@gmail.com>",
           "Nikita Rydanov <wrongwayboyy@gmail.com>",
           "Daniil Koveshnikov <dan-acer@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
seaborn = "^0.12.2"
pandas = "^1.5.3"
librosa = "^0.10.0"
tensorflow-macos = {version = "^2.11.0", platform = "darwin"}
tensorflow = {version = "^2.11.0", platform = "linux"}
tensorflow-metal = {version = "^0.7.1", platform = "darwin"}
ipykernel = "^6.22.0"
notebook = "^6.5.3"
pre-commit = "^3.2.1"
tqdm = "^4.65.0"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
torchsummary = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
